# Dropper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  DESIGN.md  README.md  SENTINEL-vs-Mythos-Comparison.md  TASKS.md  TODOS.md  commitlint.config.js  release-please-config.json  work.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  fp-report.yml
.github/scripts/: render-blockpage-fixture.mjs
.github/workflows/: a11y.yml  ci.yml  e2e-smoke.yml  lint.yml  release-please.yml  sbom.yml  security.yml
.team/codex-prompts/: T-002-allowlist-wireup.md
docs/: show-hn-draft.md  watch-test-roster.md
docs/plans/: PR-2-allowlist-wireup.md
scripts/: apply-branch-protection.sh  fresh_db_check.sh  install-gstack.sh
scripts/watchtest/: QUICKSTART.txt  README-watchtest.md  setup.ps1  uninstall.ps1
sentinel-core/: docker-compose.yml
sentinel-core/backend/api-gateway/: app.py
sentinel-core/backend/auth-service/: Dockerfile  app.py  enterprise_auth.py
sentinel-core/backend/compliance-engine/: requirements.txt
sentinel-core/backend/migrations/versions/: 20260304_001_add_host_events_and_hardening.py  20260313_001_enterprise_schema.py
sentinel-core/backend/policy-orchestrator/: requirements.txt
sentinel-core/backend/xai-service/: requirements.txt
sentinel-core/docs/: RISK-TIERS.md  SPECIFICATIONS.md
sentinel-core/docs/revamp/: BACKLOG.md
sentinel-core/frontend/admin-console/src/services/: api.ts
src/: lib.rs  main.rs
src/blockpage/: mod.rs
src/feed/: allowlist.rs  mod.rs  tranco.rs
src/resolver/: mod.rs
templates/: blockpage.html
